feat: 升级至 `SpringBoot3` 和 `Spring Authorization Server 1.1.0` 版本